--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .wrapper {  }
-    .sliderWrapper { width: 800px; overflow: hidden; }
+    .sliderWrapper { width: 800px; margin: 0 auto; overflow: hidden; }
         .slider { width: 3999999px; margin: 0 auto; padding: 0; list-style: none; }
             .sliderItem { float: left; margin: 0; padding: 0; }
         .sliderPagination {  }
